Fix align for whole section

--- a/src/app/wrapper/contact/contact.component.scss
+++ b/src/app/wrapper/contact/contact.component.scss
@@ -2,20 +2,17 @@
   padding: 4em 4em 2em 4em;
   background-color: #ffffff;
   border-radius: 4px;
+  text-align: center;
   margin: 20px 0;
   form {
     margin: 0 25%;
-    label {
-      text-align: center;
-      &::after {
-        content: "*";
-        color: blue;
-        font-weight: bolder;
-      }
+    label::after {
+      content: "*";
+      color: blue;
+      font-weight: bolder;
     }
     button {
       margin: 20px 0;
-      align-self: flex-start;
     }
   }
 }
